--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6"
   }
 }
